<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.DJRadio1.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.DJRadio1.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/rds1Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="" />

        <Button
            android:id="@+id/rds2Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="" />

        <Button
            android:id="@+id/rds3Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="" />

        <Button
            android:id="@+id/rds4Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="" />

        <Button
            android:id="@+id/rds5Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp">

            <Button
                android:id="@+id/preset1Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/preset1Text" />

            <Button
                android:id="@+id/preset2Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/preset2Text" />

            <Button
                android:id="@+id/preset3Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/preset3Text" />

            <Button
                android:id="@+id/preset4Button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/preset4Text" />

        </LinearLayout>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/exitText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>